apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    hajimari.io/appName: NGINX
    hajimari.io/icon: server
spec:
  rules:
    - host: &host web.kleinsorge.dev
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
  tls:
    - secretName: nginx-tls-certificate
      hosts:
        - *host
